<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.example.hrkm</groupId>
  <artifactId>spring-boot-sample</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>spring-boot-sample</name>
  <description>Demo project for Spring Boot</description>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>1.5.14.RELEASE</version>
    <relativePath /> <!-- lookup parent from repository -->
  </parent>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <java.version>1.8</java.version>
    <gcp.project.name></gcp.project.name>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>com.google.cloud.tools</groupId>
        <artifactId>jib-maven-plugin</artifactId>
        <version>0.9.6</version>
        <configuration>
          <from>
            <image>openjdk:8u171-jre-alpine</image>
          </from>
          <to>
            <image>gcr.io/${gcp.project.name}/${project.name}:${project.version}</image>
          </to>
          <container>
            <jvmFlags>
              <jvmFlag>-XX:+UnlockExperimentalVMOpti-XX:+UseCGroupMemoryLimitForHeapons</jvmFlag>
              <jvmFlag>-XX:ParallelGCThreads=1</jvmFlag>
              <jvmFlag>-XX:CICompilerCount=2</jvmFlag>
              <jvmFlag>-Djava.util.concurrent.ForkJoinPool.common.parallelism=1</jvmFlag>
              <jvmFlag>-Dcom.sun.management.jmxremote.port=7199</jvmFlag>
              <jvmFlag>-Dcom.sun.management.jmxremote.rmi.port=7199</jvmFlag>
              <jvmFlag>-Dcom.sun.management.jmxremote.authenticate=false</jvmFlag>
              <jvmFlag>-Dcom.sun.management.jmxremote.ssl=false</jvmFlag>
            </jvmFlags>
            <args>
              <arg>--spring.profiles.active=${SPRING_PROFILES_ACTIVE}</arg>
              <arg>--server.port=${SPRING_SERVER_PORT}</arg>
              <arg>--spring.config.location=/spring-boot/config/application.yaml</arg>
            </args>
          </container>
        </configuration>
      </plugin>
    </plugins>
  </build>


</project>
